# bcps

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
scripts/: ps_script.js  setup_script.py
src/bcps/: __init__.py  __main__.py  server.py
src/bcps/blueprints/: __init__.py  presents.py
